# lol-game-prediction

./: .gitignore  README.md  pyproject.toml
app/api/: __init__.py  main.py
app/features/: build_features.py
app/inference/: __init__.py  predictor.py  schemas.py
app/ingestion/: __init__.py  discover_team_aliases.py  discover_tournament_splits.py  reference_discovery.py  scrape.py
app/processing/: __init__.py  clean_matches.py
app/training/: __init__.py  train.py
data/processed/: matches_clean.parquet
docs/: architecture.md  feature_catalog.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts  wrangler.jsonc
frontend/src/: App.tsx  styles.css
models/latest/: feature_columns.json  metadata.json  model.joblib  preprocessor.joblib
notebooks/: load_match_features.ipynb  load_matches_clean.ipynb  matches.csv  scrape.ipynb
tests/: test_api.py  test_build_features.py  test_clean_matches.py  test_inference.py  test_reference_scripts.py  test_scrape.py  test_sql_schema_bootstrap.py  test_train.py
