[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "e2e-lol-game-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.14.1",
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.138.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "ipykernel>=7.3.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.11.0",
    "mlflow>=3.12",
    "pandas<3",
    "pyarrow>=24.0.0",
    "requests>=2.32.5",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.51",
    "tqdm>=4.67.3",
    "uvicorn>=0.49.0",
]

[project.scripts]
discover-team-aliases = "app.ingestion.discover_team_aliases:main"
discover-tournament-splits = "app.ingestion.discover_tournament_splits:main"
discover-match-links = "app.ingestion.scrape:discover_links_main"
scrape-raw-data = "app.ingestion.scrape:scrape_raw_data_main"
build-clean-matches = "app.processing.clean_matches:main"
build-match-features = "app.features.build_features:main"
train-model = "app.training.train:main"
serve-api = "app.api.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.0.2",
]
